--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "db:update:run": "npx typeorm migration:run",
+    "db:update:show": "npx typeorm migration:show",
+    "db:install": "npm run build && npm run db:update:run"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
